--- a/templates/company/send_email_list.html
+++ b/templates/company/send_email_list.html
@@ -8,7 +8,7 @@
     <div id="number_list" class="user_list">
         {% for x in users %}
           {% for user_info in x %}
-            {% if user_info.is_mail != 1 %}
+            {% if user_info.is_mail == 1 %}
             <ul>
                 <li><img src="{{user_info.image}}" alt=""></li>
                 <li class="user">{{user_info.username}}</li>
@@ -17,11 +17,12 @@
           {% endfor %}
         {% endfor %}
     </div>
-
+    {% if count %}
     <div class="more_button"> 
         <a href="#" id="more_btn">もっと見る</a>
         <a href="#" id="close_btn">表示数を戻す</a>
     </div>
+    {% endif %}
     
     <div class="send_button">
         <form action="" method="POST">
