--- a/templates/register/base.html
+++ b/templates/register/base.html
@@ -83,6 +83,18 @@
          
      </script>
     {% endif %}
+    
+    <!-- <script>
+      $(function() {
+        if ($("body").width() < 435 ){
+          console.log("testy")
+          $(".stream").on("click", function(){
+            
+          });
+        }
+      });
+    </script>
+     -->
     <!-- <script>
       document.querySelector('#room-name-submit').onclick = function(e) {
             var roomName = document.querySelector('#room-name-input').value;
