--- a/static/css/index.css
+++ b/static/css/index.css
@@ -75,13 +75,14 @@ header.blank {
 .top_contents {
   margin: auto;
   position: absolute;
-  width: 700px;
+  display: block;
+  text-align: center;
   top: 0;
   right: 0;
   left: 0;
   bottom: 0;
   height: 200px;
-  background: none;
+  border-radius: 10px;
 }
 
 .top_contents div.title p {
@@ -114,7 +115,7 @@ header.blank {
 
 .top_search_bar input {
   width: 450px;
-  height: 70px;
+  height: 60px;
   border: 1px solid black;
   border-radius: 15px;
   padding-left: 70px;
@@ -558,7 +559,7 @@ header {
   transition: 1s;
   position: fixed;
   z-index: 1;
-  top: 235px;
+  top: 195px;
   font-family: 游ゴシック体, 'Yu Gothic', YuGothic, 'ヒラギノ角ゴシック Pro', 'Hiragino Kaku Gothic Pro', メイリオ, Meiryo, Osaka, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;
 }
 
@@ -794,6 +795,7 @@ form[name='filter_name'] {
 }
 
 .bg-light {
+  height: 100px;
   top: 0;
   margin: auto;
   right: 0;
@@ -1381,11 +1383,15 @@ li.new_account {
 }
 
 .profilecard {
-  width: 110vw;
-  height: 25vw;
+  height: 40%;
+  width: 50%;
   margin: 3vw 2vw;
   padding: 1vw;
   background-color: rgba(255,255,255);
+  background: -webkit-linear-gradient(rgba(255,255,255) );
+  background: -moz-linear-gradient(rgba(255,255,255));
+  background: -o-linear-gradient(rgba(255,255,255));
+  background: linear-gradient(rgba(255,255,255));
   border: solid 10px #f7b52c;
   /* overflow: auto; */
 }
@@ -1400,6 +1406,12 @@ li.new_account {
   height: 100px;
   width: 100px;
   border-radius: 50px;
+}
+
+.img_preview_chat {
+  width: 230px;
+  height: 200px;
+  margin: 10px auto;
 }
 
 .preview_files {
@@ -1810,6 +1822,10 @@ a:hover {
   margin-top: 150px;
 }
 
+.sec4.item {
+  height: 0px!important;
+}
+
 .img_item {
   width: 276px;
   height: 207px;
@@ -1961,6 +1977,7 @@ a:hover {
   border: 2px solid;
   border-radius: 10px;
   margin-bottom: 100px;
+  margin-top: 50px;
 }
 
 .image_field {
@@ -1972,7 +1989,7 @@ a:hover {
   margin: 30px;
 }
 
-.css-cancel{
+.css-cancel.info{
   display: inline-block;
   position: relative;
   margin: 0 30px 0 10px;
@@ -1983,7 +2000,7 @@ a:hover {
   transform: rotate(45deg);
 }
 
-.css-cancel:before{
+.css-cancel.info:before{
   display: block;
   content: "";
   position: absolute;
@@ -2279,7 +2296,9 @@ label.license_year {
 /* チャットルーム */
 
 .main_chat_room {
-  margin-top: 70px;
+  margin-top: 90px;
+  height: 90vh;
+  position: relative;
 }
 
 .main_room {
@@ -2384,19 +2403,44 @@ label.license_year {
   background-color:#f3f4f8;
   text-align:right;
   position: fixed;
-  bottom: 100px;
+  bottom: 30px;
   width: 900px;
   z-index: 10;
 }
   
 .chat_room > input{
+  display: inline-block;
   width: 600px;
   height: 50px;
   font-size: 20px;
   padding: 0 10px;
   background-color:#ffffff;
 }
-  
+
+
+#img_id {
+  width: 900px;
+  display: none;
+}
+
+#img_id > input {
+  width: 600px;
+  height: 50px;
+  font-size: 20px;
+  padding: 0 10px;
+  background-color: #ffffff;
+}
+
+#img_id > #chat-message-submit {
+  display: inline-block;
+  width: 100px;
+  height: 48px;
+  background-color:#5785e3;
+  color:#ffffff;
+  cursor: pointer;
+  margin: 0 10px;
+}
+
 #chat-message-submit {
   width: 100px;
   height: 48px;
@@ -2460,7 +2504,7 @@ label.license_year {
   border: 2px solid black;
   width: 30%;
   background: white;
-  top: 100px;
+  top: 150px;
   padding: 50px 5px;
   margin-left: 15px;
   border-radius: 50px;
@@ -2769,15 +2813,16 @@ button.stripe-button-el>span:hover {
 .remake_article_sub li a {
   font-size: 15px!important;
 }
-
+/* 
 @media (min-width: 1100px){
   .container {
     max-width: 1300px;
   }
-}
+} */
 
 .main_content {
   overflow: auto;
+  width: 70%;
 }
 
 div.main_view .res-header {
@@ -2786,7 +2831,7 @@ div.main_view .res-header {
 
 .add-image {
   position: absolute;
-  left: 30px;
+  left: 50px;
 }
 
 .add-image span label {
@@ -3099,3 +3144,305 @@ textarea.form-control {
 .more_button a:hover {
   color: black;
 }
+
+#sec1  {
+  height: 80vh;
+  width: 100%;
+}
+
+#sec2 {
+  height: 190vh;
+  margin: auto 40px;
+  background: rgba(255, 255, 255, .8);
+}
+
+.sec2_info  {
+  display: flex;
+  justify-content: center;
+  margin: 50px auto;
+  background: rgba(255, 255, 255, .8);
+  border-radius: 20px;
+}
+
+.sec2_info_img {
+  width: 50%;
+  margin: auto;
+}
+
+
+.sec2_info_img img {
+  width: 70%;
+}
+
+.sec2_info_main {
+  width: 50%;
+  padding: 80px 50px;
+}
+
+.sec2_info_main h2 {
+  font-size: 30px;
+  font-weight: 800;
+  text-shadow: 1px 1px grey;
+}
+
+.sec2_info_main span {
+  font-size: 45px;
+  font-weight: 800;
+  margin: 0 10px;
+}
+
+.sec2_info_main p {
+  font-size: 25px;
+  font-weight: 600;
+  margin: 50px 20px;
+}
+
+.sec2_info_right {
+  display: flex;
+  justify-content: center;
+  margin: 50px auto;
+  background: rgba(255, 255, 255, .8);
+  border-radius: 20px;
+}
+
+.sec2_title {
+  height: 300px;
+  padding: 50px;
+}
+
+.sec2_title {
+  font-size: 40px;
+  font-weight: 800;
+  text-shadow: 1px 1px 1px grey;
+  margin: 10px;
+  text-align: center;
+}
+
+.sec2_title h2 {
+  font-size: 40px;
+  font-weight: 800;
+}
+
+.sec2_title p {
+  font-size: 23px;
+  margin: 20px;
+  font-weight: 500;
+}
+
+.sec2_info_main_content {
+  margin: 30px;
+}
+
+#sec3 {
+  background: rgba(255, 255, 255, .8);
+  margin: auto 40px;
+  margin-bottom: 0;
+  height: 90vh;
+  padding: 50px;
+}
+
+.sec3_title_main {
+  margin: 50px;
+
+}
+
+.sec3_title {
+  font-size: 40px;
+  font-weight: 800;
+}
+
+.sec3_title_content {
+  font-size: 23px;
+  font-weight: 500;
+}
+
+.sec3_info_contents {
+  display: flex;
+  justify-content: center;
+
+}
+
+.sec3_info {
+  width: 50%;
+  font-size: 23px;
+  font-weight: 600;
+  height: 250px;
+  padding: 60px;
+}
+
+.sec_info p {
+  font-size: 23px;
+  font-weight: 600;
+}
+
+.main_comment {
+  margin: 100px;
+}
+
+.main_comment h3 {
+  font-size: 40px;
+  font-weight: 800;
+  text-shadow: 2px 2px 2px silver;
+}
+
+#sec4 {
+  margin: auto 40px;
+  background: rgba(255, 255, 255, .8);
+  padding: 50px 0;
+  height: 95vh;
+}
+
+.sec4_title h3 {
+  font-size: 30px;
+  font-weight: 800;
+}
+
+.sec4_title p {
+  font-size: 23px;
+  margin: 20px;
+  font-weight: 600;
+}
+
+.sec4_main {
+  height: 90vh;
+  padding: 40px;
+  width: 1470px;
+  margin: 0 auto;
+}
+
+#sec5 {
+  margin: auto 40px;
+  background: rgba(255, 255, 255, .8);
+  padding: 50px 0;
+  height: 70vh;
+}
+
+.sec5_content {
+  margin: 50px;
+}
+
+.sec5_img_item {
+  width: 276px;
+  height: 207px;
+}
+
+.sec5_title h2 {
+ font-size: 35px;
+ font-weight: 800;
+}
+
+.sec5_title p {
+  font-size : 23px;
+}
+
+.sec5.slick-slide {
+  display: block!important;
+  width: 300px!important;
+}
+
+.company_name .sec5_text {
+  font-size: 23px;
+  font-weight: 800;
+  margin: 10px;
+}
+
+.company_name .sec5_text_email {
+  font-size: 18px;
+  font-weight: 800;
+  margin: 10px;
+}
+
+#sec6 {
+  height: 75vh;
+  background: rgba(255, 255, 255, .8);
+  margin: auto 40px;
+}
+
+.sec6_main {
+  padding: 150px;
+
+}
+
+.sec6_text {
+  margin-bottom : 100px;
+
+}
+
+.sec6_button {
+  margin: auto;
+}
+
+.sec6_button a {
+  text-decoration: none;
+}
+
+.sec6_text p {
+  font-size: 30px;
+  font-weight: 800;
+}
+
+.footer {
+  width: 100%;
+  height: 300px;
+  background-color: #f5f5f5;
+  margin-top: 30px;
+  position: relative!important;
+}
+body > .container {
+  padding: 60px 15px 0;
+}
+.container .text-muted {
+  margin: 20px 0;
+}
+ 
+.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+.sec2_info_img.sp {
+  display: none;
+}
+
+.preview_chat {
+  text-align: right;
+  margin-right: 60px;
+}
+
+.img-view {
+  display: none;
+  text-align: right;
+}
+
+.img-view p {
+  text-align: right;
+  margin-right: 50px;
+  font-size: 18px;
+  font-weight: 800;
+}
+
+.css-cancel {
+  display: inline-block;
+  position: relative;
+  margin: 0 20px 0 7px;
+  padding: 0;
+  width: 4px;
+  height: 20px;
+  background: #000;
+  transform: rotate(45deg);
+  margin-right: 60px;
+  cursor: pointer;
+}
+
+.css-cancel:before {
+display: block;
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: -8px;
+  width: 20px;
+  height: 4px;
+  margin-top: -2px;
+  background: #000;
+}
+  
