--- a/templates/commons/commons_page.html
+++ b/templates/commons/commons_page.html
@@ -1,27 +1,30 @@
+ {% load extra %}
+
 <div class="row mx-auto" style="width: 600px;">
     <ul class="pagination">
         <!-- 前へ の部分 -->
-        {% if page_obj.has_previous %}
+        {% if page_obj_list.has_previous %}
+
             <li class="page-item">
-                <a class="page-link" href="?page={{ page_obj.previous_page_number }}">
+                <a class="page-link" href="?{% url_replace request 'page' page_obj_list.previous_page_number %}">
                     <span aria-hidden="true">&laquo;</span>
                 </a>
             </li>
         {% endif %}
     
         <!-- 数字の部分 -->
-        {% for num in page_obj.paginator.page_range %}
-            {% if page_obj.number == num %}
+        {% for num in page_obj_list.paginator.page_range %}
+            {% if page_obj_list.number == num %}
                 <li class="page-item active"><a class="page-link" href="#!">{{ num }}</a></li>
             {% else %}
-                <li class="page-item"><a class="page-link" href="?page={{ num }}">{{ num }}</a></li>
+                <li class="page-item"><a class="page-link" href="?{% url_replace request 'page' num %}">{{ num }}</a></li>
             {% endif %}
         {% endfor %}
     
         <!-- 次へ の部分 -->
-        {% if page_obj.has_next %}
+        {% if page_obj_list.has_next %}
             <li class="page-item">
-                <a class="page-link" href="?page={{ page_obj.next_page_number }}">
+                <a class="page-link" href="?{% url_replace request 'page' page_obj_list.next_page_number %}">
                     <span aria-hidden="true">&raquo;</span>
                 </a>
             </li>
